Changed Create post

--- a/templates/html/createpost.html
+++ b/templates/html/createpost.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div id="form-create">
-  <form  action="/post" method="POST">
+  <form  action="/post/" method="POST">
     <label for="title">Title:</label>
     <input type="text" name="title" placeholder="Enter post title..." required>
     <label for="category">Category:</label>
