--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -55,7 +55,7 @@
                     <span class="nav-item header__link">Logout</span>
                 </a></li>
                 <div class="create_post btn">
-                    <a href="/post"><h1 class="posts">Create Post</h1></a>
+                    <a href="/post/"><h1 class="posts">Create Post</h1></a>
                  </div>
             </ul>
         </nav>
