--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -18,7 +18,7 @@
     <header>
         <nav>
             <ul>
-                <li class="header__link"><a href="/filter?category=created-post">
+                <li class="header__link"><a href="/filter/created-post">
                     <i class="fas fa-user header__link"> </i>
                         <span class="nav-item header__link"> {{.User.Username}}</span>
                 </a></li>
