--- a/templates/html/welcome.html
+++ b/templates/html/welcome.html
@@ -22,31 +22,31 @@
                   <i class="fas fa-user header__link"> </i>
                       <span class="nav-item header__link"> {{.User.Username}}</span>
               </a></li>
-              <li><a href="/filter?category=liked-post">
+              <li><a href="/filter/liked-post">
                   <i class="fas fa-heart header__link"> </i>
                   <span class="nav-item header__link">Liked Posts</span>
               </a></li>
-              <li><a href="/filter?category=created-post">
+              <li><a href="/sign-in">
                   <i class="fas fa-tasks header__link"> </i>
                   <span class="nav-item header__link">Posts</span>
               </a></li>
-              <li><a href="/filter?category=fantasy">
+              <li><a href="/welcome/filter/fantasy">
                   <i class="fas fa-question-circle header__link"> </i>
                   <span class="nav-item header__link">Fantasy</span>
               </a></li>
-              <li><a href="/filter?category=drama">
+              <li><a href="/welcome/filter/drama">
                   <i class="fas fa-tv header__link"> </i>
                   <span class="nav-item header__link">Drama</span>
               </a></li>
-              <li class="header__link"><a href="/filter?category=comedy">
+              <li class="header__link"><a href="/welcome/filter/comedy">
                   <i class="fas fa-book header__link"> </i>
                   <span class="nav-item header__link">Comedy</span>
               </a></li>
-              <li><a href="/filter?category=adventure">
+              <li><a href="/welcome/filter/adventure">
                   <i class="fas fa-music header__link"> </i>
                   <span class="nav-item header__link">Adventure</span>
               </a></li>
-              <li><a href="/filter?category=romance">
+              <li><a href="/welcome/filter/romance">
                   <i class="fas fa-list header__link"> </i>
                   <span class="nav-item header__link">Romance</span>
               </a></li>
