--- a/templates/html/welcome.html
+++ b/templates/html/welcome.html
@@ -96,7 +96,7 @@
       </div>
 
       <div class="view">
-      <form class="view-button" action="/welcome/comment?id={{.Id}}" method="post">
+      <form class="view-button" action="/welcome/comment/{{.Id}}" method="post">
         <input type="submit" value="view comment" />
       </form>
     </div>
