--- a/templates/html/commentunauth.html
+++ b/templates/html/commentunauth.html
@@ -13,7 +13,8 @@
    
 </head>
 <body>
-    <h1>Post</h1>
+    <a href="/welcome/"><h1>Post</h1></a>
+    
     <div class="post">
         <div class="post__header">
             <img class="post__avatar" src="/static/img/avatar.png" />
